# munin-observers

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
examples/: pyside.py  pyside_button.py  pyside_text.py  simple.py
munin/: __init__.py  munin.py
muninn/: __init__.py  muninn.py
tests/: test_munin.py  test_muninn.py
