[metadata]
name = munin-observers
version = 0.0.1
description = Your one-stop-shop for observer synchronization.
long_description = file: README.md
keywords =
    muninn
    observer
    pattern
    synchronization
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = munin
include_package_data = True

[options.extras_require]
dev =
    coverage[toml]
    mypy
    black
    pytest
    pytest-cov
    pytest-mypy
    twine
