[metadata]
name = munin-observers
version = 0.2.0
description = Your one-stop-shop for observer synchronization.
url = https://github.com/hedesandxlii/munin-observers
author = André Hedesand
author_email = andre.hedesand@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    munin
    observer
    listener
    signal
    pattern
    synchronization
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = munin
include_package_data = True

[options.extras_require]
dev =
    coverage[toml]
    mypy
    black
    pytest
    pytest-cov
    pytest-mypy
    twine
examples =
    PySide6
